--- a/work.ipynb
+++ b/work.ipynb
@@ -721,6 +721,7 @@
    ],
    "source": [
     "from joblib import dump, load\n",
+    "\n",
     "dump(model, \"livestock_model.joblib\")"
    ]
   },
@@ -1519,6 +1520,7 @@
     "\n",
     "year = 2100\n",
     "\n",
+    "\n",
     "def year_to_index(year):\n",
     "    return (year - 2015) * 12\n",
     "\n",
@@ -1537,16 +1539,16 @@
     "    (surf_temp_fourier_resized, precip_fourier_resized)\n",
     ").reshape(-1, surf_temp_fourier_resized.shape[2] + precip_fourier_resized.shape[2])\n",
     "\n",
-    "'''\n",
+    "\"\"\"\n",
     "with torch.no_grad():\n",
     "    feature_vectors_tensor = torch.tensor(feature_vectors, dtype=torch.float32).to(\n",
     "        device\n",
     "    )\n",
     "    predictions_tensor = mlp_model(feature_vectors_tensor)\n",
     "    predictions = predictions_tensor.cpu().numpy()\n",
-    "'''\n",
+    "\"\"\"\n",
     "predictions = model.predict(feature_vectors)\n",
-    "    \n",
+    "\n",
     "predictions_masked = np.zeros(livestock_data.shape[0] * livestock_data.shape[1])\n",
     "predictions_masked[:] = -1\n",
     "predictions_masked[valid_indices] = predictions[valid_indices].flatten()\n",
@@ -1577,20 +1579,19 @@
     "predictions_masked[:] = -1\n",
     "predictions_masked[valid_indices] = predictions[valid_indices].flatten()\n",
     "predictions_reshaped = predictions_masked.reshape(glw4_shape)\n",
-    "predictions_reshaped = np.ma.masked_where(predictions_reshaped == -1, predictions_reshaped)\n",
+    "predictions_reshaped = np.ma.masked_where(\n",
+    "    predictions_reshaped == -1, predictions_reshaped\n",
+    ")\n",
     "\n",
-    "predictions_reshaped = np.roll(predictions_reshaped, predictions_reshaped.shape[1] // 2, axis=1)\n",
+    "predictions_reshaped = np.roll(\n",
+    "    predictions_reshaped, predictions_reshaped.shape[1] // 2, axis=1\n",
+    ")\n",
     "\n",
     "plt.rcParams.update({\"font.family\": \"Segoe UI\", \"font.size\": 10})\n",
     "plt.figure(figsize=(12, 6), dpi=300)\n",
     "plt.title(f\"Projected Livestock Density Map - 2100\", fontsize=12)\n",
     "plt.gca().set_facecolor(\"lightgray\")\n",
-    "plt.imshow(\n",
-    "    predictions_reshaped,\n",
-    "    cmap=\"plasma\",\n",
-    "    vmin=0,\n",
-    "    vmax=4\n",
-    ")\n",
+    "plt.imshow(predictions_reshaped, cmap=\"plasma\", vmin=0, vmax=4)\n",
     "plt.gca().set_xticks([])\n",
     "plt.gca().set_yticks([])\n",
     "plt.colorbar(label=\"Livestock Density (log, animals/km^2 * pixel area)\", fraction=0.04)\n",
@@ -1644,6 +1645,7 @@
    ],
    "source": [
     "import ee\n",
+    "\n",
     "ee.Authenticate()"
    ]
   },
@@ -1665,29 +1667,29 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "SCALE_FACTOR = 10\n",
     "\n",
     "HUMAN_MODIF_ID = \"CSP/HM/GlobalHumanModification\"\n",
     "human_modification = ee.ImageCollection(HUMAN_MODIF_ID).select(\"gHM\")\n",
-    "human_modif_npy = ee.data.computePixels({\n",
-    "    \"expression\": human_modification.first(),\n",
-    "    \"fileFormat\": \"NUMPY_NDARRAY\",\n",
-    "    \"grid\": {\n",
-    "        'dimensions': {\n",
-    "            'width': 360 * SCALE_FACTOR,\n",
-    "            'height': 180 * SCALE_FACTOR\n",
+    "human_modif_npy = ee.data.computePixels(\n",
+    "    {\n",
+    "        \"expression\": human_modification.first(),\n",
+    "        \"fileFormat\": \"NUMPY_NDARRAY\",\n",
+    "        \"grid\": {\n",
+    "            \"dimensions\": {\"width\": 360 * SCALE_FACTOR, \"height\": 180 * SCALE_FACTOR},\n",
+    "            \"affineTransform\": {\n",
+    "                \"scaleX\": 1 / SCALE_FACTOR,\n",
+    "                \"shearX\": 0,\n",
+    "                \"translateX\": -180,\n",
+    "                \"shearY\": 0,\n",
+    "                \"scaleY\": -1 / SCALE_FACTOR,\n",
+    "                \"translateY\": 90,\n",
+    "            },\n",
+    "            \"crsCode\": \"EPSG:4326\",\n",
     "        },\n",
-    "        'affineTransform': {\n",
-    "            'scaleX': 1 / SCALE_FACTOR,\n",
-    "            'shearX': 0,\n",
-    "            'translateX': -180,\n",
-    "            'shearY': 0,\n",
-    "            'scaleY': -1 / SCALE_FACTOR,\n",
-    "            'translateY': 90\n",
-    "        },\n",
-    "        'crsCode': 'EPSG:4326',\n",
-    "    },\n",
-    "})"
+    "    }\n",
+    ")"
    ]
   },
   {
